--- a/src/jquery.demilamedia.css
+++ b/src/jquery.demilamedia.css
@@ -70,16 +70,16 @@
     width: 20px;
 }
 #demilamedia .demilamedia_top .hlb_left{
-	background: url("images/sprite.png") no-repeat -88px -53px;
+	background: url("images/sprite.png") no-repeat 0 0;
 }
 #demilamedia .demilamedia_top .hlb_right{
-	background: url("images/sprite.png") no-repeat -110px -53px;
+	background: url("images/sprite.png") no-repeat -22px 0;
 }
 #demilamedia .demilamedia_bottom .hlb_left{
-	background: url("images/sprite.png") no-repeat -88px -80px;
+	background: url("images/sprite.png") no-repeat 0 -27px;
 }
 #demilamedia .demilamedia_bottom .hlb_right{
-	background: url("images/sprite.png") no-repeat -110px -80px;
+	background: url("images/sprite.png") no-repeat -22px -27px;
 }
 #demilamedia #demilamedia_objs{
 	position: relative;
