--- a/src/jquery.demilamedia.css
+++ b/src/jquery.demilamedia.css
@@ -178,7 +178,7 @@
 	margin-top: -10px;
 	position: relative;
 }
-#demilamedia #demilamedia_video{
+#demilamedia #demilamedia_video, #demilamedia #demilamedia_iframe{
 	width: 100%;
 	height: 100%;
 }
